Closed
Bug 290355
Opened 21 years ago
Closed 21 years ago
Focus events wrong in manage bookmarks and tree views in general
Categories
(Firefox :: Disability Access, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
References
(Blocks 1 open bug)
Details
(Keywords: access)
Attachments
(1 file)
|
4.41 KB,
patch
|
timeless
:
review+
neil
:
superreview+
mkaply
:
approval-aviary1.1a1+
|
Details | Diff | Splinter Review |
Open manage bookmarks (alt+b m)
First problem: accessible focus goes to window instead of tree item that's focused.
Second problem: shift+tab to text field, accessible focus goes back to folders tree
| Assignee | ||
Comment 1•21 years ago
|
||
Shift+tab seems to be broken for all tree views.
| Assignee | ||
Comment 2•21 years ago
|
||
*** Bug 281547 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•21 years ago
|
Summary: Focus events wrong in manage bookmarks → Focus events wrong in manage bookmarks and tree views in general
| Assignee | ||
Comment 3•21 years ago
|
||
Attachment #183422 -
Flags: review?(timeless)
Comment on attachment 183422 [details] [diff] [review]
1) Simulate a focus event in our own code when a new window accessible is created, so that initial MSAA focus event gets fired, 2) Only fire MSAA focus for tree items when owning tree view is focused
>Index: accessible/src/base/nsRootAccessible.cpp
>@@ -500,18 +414,24 @@ void nsRootAccessible::FireCurrentFocusE
>+ event->InitEvent(NS_LITERAL_STRING("focus"), PR_TRUE, PR_TRUE);
technically initevent can fail (that it doesn't right now is a bug which will
lead to me crashing)
Attachment #183422 -
Flags: review?(timeless) → review+
| Assignee | ||
Comment 5•21 years ago
|
||
Comment on attachment 183422 [details] [diff] [review]
1) Simulate a focus event in our own code when a new window accessible is created, so that initial MSAA focus event gets fired, 2) Only fire MSAA focus for tree items when owning tree view is focused
Thank you timeless, I will check the return value.
Attachment #183422 -
Flags: superreview?(neil.parkwaycc.co.uk)
Updated•21 years ago
|
Attachment #183422 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
| Assignee | ||
Updated•21 years ago
|
Attachment #183422 -
Flags: approval-aviary1.1a1?
Comment 6•21 years ago
|
||
Comment on attachment 183422 [details] [diff] [review]
1) Simulate a focus event in our own code when a new window accessible is created, so that initial MSAA focus event gets fired, 2) Only fire MSAA focus for tree items when owning tree view is focused
a=mkaply
Attachment #183422 -
Flags: approval-aviary1.1a1? → approval-aviary1.1a1+
| Assignee | ||
Comment 7•21 years ago
|
||
Checking in src/base/nsRootAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsRootAccessible.cpp,v <--
nsRootAccessible.cpp
new revision: 1.116; previous revision: 1.115
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•