Bug 290355. Fix MSAA events related to trees and initial focus in windows, r=timeless, sr=neil, a=mkaply